[General] Upgrade to latest ui-bootstrap

--- a/src/igz_controls/components/action-item/action-item-refresh/action-item-refresh.tpl.html
+++ b/src/igz_controls/components/action-item/action-item-refresh/action-item-refresh.tpl.html
@@ -1,5 +1,5 @@
 <div class="igz-action-item"
-     data-tooltip="Refresh"
+     data-uib-tooltip="Refresh"
      data-tooltip-append-to-body="true"
      data-tooltip-placement="bottom"
      data-tooltip-popup-delay="1000"
