--- a/src/igz_controls/components/actions-panes/actions-panes.tpl.html
+++ b/src/igz_controls/components/actions-panes/actions-panes.tpl.html
@@ -3,7 +3,7 @@
         <div class="actions-list">
             <div class="igz-action-item"
                  data-ng-if="$ctrl.isShowFilterActionIcon()"
-                 data-tooltip="Filter"
+                 data-uib-tooltip="Filter"
                  data-tooltip-append-to-body="true"
                  data-tooltip-placement="bottom"
                  data-tooltip-popup-delay="1000"
@@ -14,7 +14,7 @@
             <div class="igz-action-item last-item"
                  data-ng-class="{inactive: (!$ctrl.isInfoPaneOpened && !$ctrl.infoPaneToggleMethod) || $ctrl.infoPaneDisable}"
                  data-ng-if="$ctrl.closeInfoPane || $ctrl.infoPaneToggleMethod"
-                 data-tooltip="Info pane"
+                 data-uib-tooltip="Info pane"
                  data-tooltip-append-to-body="true"
                  data-tooltip-placement="bottom"
                  data-tooltip-popup-delay="1000"
