--- a/src/igz_controls/components/elastic-input-field/elastic-input-field.tpl.html
+++ b/src/igz_controls/components/elastic-input-field/elastic-input-field.tpl.html
@@ -1,7 +1,7 @@
 <div class="igz-elastic-input-field">
     <div class="non-editable text-ellipsis"
          data-ng-if="$ctrl.readOnly"
-         data-tooltip="{{$ctrl.model}}"
+         data-uib-tooltip="{{$ctrl.model}}"
          data-tooltip-append-to-body="true"
          data-tooltip-popup-delay="200">{{$ctrl.model}}</div>
     <div class="editable"
