--- a/src/igz_controls/components/action-item/action-item-more/action-item-more.tpl.html
+++ b/src/igz_controls/components/action-item/action-item-more/action-item-more.tpl.html
@@ -1,7 +1,7 @@
 <div class="igz-action-item"
      data-ng-class="{'subtemplate-show': $ctrl.isDropdownShown}">
 
-    <div data-tooltip="More options"
+    <div data-uib-tooltip="More options"
          data-tooltip-popup-delay="1000"
          data-tooltip-placement="bottom">
 
