--- a/src/igz_controls/components/action-item/action-item.tpl.html
+++ b/src/igz_controls/components/action-item/action-item.tpl.html
@@ -6,7 +6,7 @@
      data-ng-click="$ctrl.onClickAction($event)"
      data-ng-if="$ctrl.template !== 'additional'">
 
-    <div data-tooltip="{{$ctrl.action.label}}"
+    <div data-uib-tooltip="{{$ctrl.action.label}}"
          data-tooltip-popup-delay="1000"
          data-tooltip-placement="bottom">
 
