--- a/src/igz_controls/components/info-page/info-page-filters/info-page-filters.less
+++ b/src/igz_controls/components/info-page/info-page-filters/info-page-filters.less
@@ -309,6 +309,7 @@
                         border-width: 0 0 1px 0;
                         border-radius: 0;
                         box-shadow: none;
+                        border-color: #ddd;
 
                         &.panel-default {
                             border-color: #ddd;
