--- a/src/igz_controls/components/info-page/info-page-actions-bar/info-page-actions-bar.less
+++ b/src/igz_controls/components/info-page/info-page-actions-bar/info-page-actions-bar.less
@@ -1,19 +1,21 @@
 // Style rules for actions bar
 .border-top > .igz-info-page-actions-bar {
-    border-top: 1px solid @pale-grey-two;
+    .info-page-actions-bar-color-set();
+
+    border-top: @info-page-actions-bar-border-top;
 }
 
 .igz-info-page-actions-bar {
     .info-page-actions-bar-color-set();
 
-    background-color: @white;
+    background-color: @info-page-actions-bar-bg-color;
     position: absolute;
     top: 0;
     right: 0;
     left: 0;
     height: 56px;
     padding: 8px 20px 8px 16px;
-    border-bottom: 1px solid @pale-grey-two;
+    border-bottom: @info-page-actions-bar-border-bottom;
     transition: @igz-basic-transition;
 
     &.upper-pane-opened {
@@ -51,7 +53,7 @@
 
     .actions-panes-block {
         padding-left: 16px;
-        border-left: 1px solid @pale-grey-two;
+        border-left: @actions-panes-block-border-left;
     }
 
     .actions-content-block {
@@ -77,12 +79,12 @@
 
             &:hover {
                 background-color: @create-entity-btn-hover-bg-color;
-                box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+                box-shadow: @create-entity-btn-hover-box-shadow;
             }
 
             &:active {
                 background-color: @create-entity-btn-active-bg-color;
-                box-shadow: inset 0.4px 1.9px 3px 0 rgba(0, 0, 0, 0.2);
+                box-shadow: @create-entity-btn-active-box-shadow;
             }
 
             &.disabled {
