rename data-dropdown -> data-uib-dropdown

--- a/src/igz_controls/components/sort-dropdown/sort-dropdown.tpl.html
+++ b/src/igz_controls/components/sort-dropdown/sort-dropdown.tpl.html
@@ -1,6 +1,6 @@
-<div class="igz-browser-sort-dropdown dropdown" data-dropdown
+<div class="igz-browser-sort-dropdown dropdown" data-uib-dropdown
      data-is-open="$ctrl.isOpen">
-    <div class="igz-action-item" data-dropdown-toggle>
+    <div class="igz-action-item" data-uib-dropdown-toggle>
         <span class="action-icon igz-icon-sort"></span>
     </div>
     <ul class="dropdown-menu dropdown-list"
