expand/collapse test-pane

--- a/src/nuclio/common/components/navigation-tabs/navigation-tabs.tpl.html
+++ b/src/nuclio/common/components/navigation-tabs/navigation-tabs.tpl.html
@@ -31,3 +31,10 @@
         </div>
     </div>
 </div>
+
+<div class="toggle-test-pane-icon-wrapper"
+     data-ng-class="{'test-pane-closed': $ctrl.isTestPaneClosed}">
+    <span class="igz-icon-test-pane toggle-test-pane-icon"
+          data-ng-click="$ctrl.toggleTestPane()">
+    </span>
+</div>
