--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
@@ -6,6 +6,12 @@
     border-top: none;
     position: relative;
     background-color: @white;
+    transition: @igz-basic-transition;
+
+    &.test-pane-closed {
+        width: 0;
+        transition: @igz-basic-transition;
+    }
 
     .ncl-secondary-button {
         background-color: @pale-grey;
