added missed collapse/expand test pane icon

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -581,6 +581,10 @@
     .generateIconClass(985);
 }
 
+.igz-icon-test-pane {
+    .generateIconClass(987);
+}
+
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
     font-size: 17px;
