--- a/src/nuclio/projects/project/functions/version/version-code/version-code.less
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.less
@@ -16,9 +16,10 @@
         .ncl-edit-version-code-wrapper {
             height: 100%;
             padding: 24px 41px 0;
+            min-width: 700px;
 
             .ncl-code-entry-url {
-                width: 700px;
+                max-width: 700px;
             }
 
             .ncl-edit-version-code-form {
