fixed issue with 'toggle test pane' button and 'test' button.

--- a/src/nuclio/common/components/navigation-tabs/navigation-tabs.tpl.html
+++ b/src/nuclio/common/components/navigation-tabs/navigation-tabs.tpl.html
@@ -33,8 +33,8 @@
 </div>
 
 <div class="toggle-test-pane-icon-wrapper"
-     data-ng-class="{'test-pane-closed': $ctrl.isTestPaneClosed}">
-    <span class="igz-icon-test-pane toggle-test-pane-icon"
-          data-ng-click="$ctrl.toggleTestPane()">
-    </span>
+     data-ng-if="$ctrl.isToggleButtonVisible()"
+     data-ng-class="{'test-pane-closed': $ctrl.isTestPaneClosed}"
+     data-ng-click="$ctrl.toggleTestPane()">
+    <span class="igz-icon-test-pane toggle-test-pane-icon"></span>
 </div>
