Configuration/Build: Fields added

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
@@ -32,6 +32,14 @@
         }
     }
 
+    .build-checkboxes {
+        display: flex;
+
+        .checkbox-block {
+            width: 20%;
+        }
+    }
+
     .files-field {
         margin-bottom: 1px;
 
