--- a/src/nuclio/common/components/edit-item/edit-item.less
+++ b/src/nuclio/common/components/edit-item/edit-item.less
@@ -39,6 +39,10 @@
         .field-label {
             text-transform: capitalize;
         }
+
+        &.attribute-field-checkbox {
+            padding: 35px 0 19px;
+        }
     }
 
     .no-class-selected {
