Added new fields for triggers (p1) - fixed comments

--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -217,6 +217,8 @@
             <div class="igz-col-91 attribute-field ingresses-wrapper"
                  data-ng-if="$ctrl.isClassSelected() && $ctrl.isHttpTrigger()">
 
+                <div class="field-label">Ingresses</div>
+
                 <div class="table-headers">
                     <div class="key-header">Host</div>
                     <div class="value-header">Paths</div>
@@ -264,7 +266,7 @@
             <div class="igz-col-91 attribute-field annotations-wrapper"
                  data-ng-if="$ctrl.isClassSelected() && $ctrl.isHttpTrigger()">
 
-                <div class="title">Annotations</div>
+                <div class="field-label">Annotations</div>
 
                 <div class="table-headers">
                     <div class="key-header">Key</div>
