--- a/src/nuclio/projects/project/functions/version/version-triggers/version-triggers.less
+++ b/src/nuclio/projects/project/functions/version/version-triggers/version-triggers.less
@@ -18,8 +18,22 @@
         }
     }
 
+    .common-table-body {
+        .common-table-row {
+            &:not(.read-only):hover {
+                .common-table-cells-container {
+                    background-color: @white;
+                }
+
+                .actions-menu {
+                    background-color: @white;
+                }
+            }
+        }
+    }
+
     .item-row .item-name, .item-row .item-class, .item-row .item-info {
-       padding-left: 0;
+        padding-left: 0;
     }
 
     .title-field-row .name-field, .item-row .item-name, .header-name {
