--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -27,7 +27,7 @@
                                       data-placeholder="{{ $ctrl.placeholder }}"
                                       data-prevent-drop-up="true"
                                       data-values-array="$ctrl.classList"
-                                      data-selected-item="$ctrl.item.kind"
+                                      data-selected-item="$ctrl.selectedClass.id"
                                       data-form-object="$ctrl.editItemForm"
                                       data-item-select-callback="$ctrl.onSelectClass(item)">
                 </igz-default-dropdown>
