Triggers/Cron: Add fields

--- a/src/nuclio/projects/project/functions/version/version.less
+++ b/src/nuclio/projects/project/functions/version/version.less
@@ -65,6 +65,7 @@
     .create-variable-button,
     .create-header-button,
     .create-annotation-button,
+    .create-event-header,
     .create-label-button,
     .create-binding-button,
     .create-ingress-button {
